--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -82,11 +82,11 @@
   background-repeat: no-repeat
   background-size: cover
 .bg_grad-03
-  background-image: url("../assets/curso/tema1/fondo2.svg")
+  background-image: url("../assets/curso/tema2/fondo2.svg")
   background-repeat: no-repeat
   background-size: cover
 .bg_grad-04
-  background-image: url("../assets/curso/tema1/fondo3.svg")
+  background-image: url("../assets/curso/tema2/fondo3.svg")
   background-repeat: no-repeat
   background-size: cover
 .bgr
@@ -109,6 +109,37 @@
     background-color: #FFEDCC
     border-radius: 10px
     height: 100%
+  &_6
+    background-color: $white
+  &_7
+    background-color: #FFCECA
+    border-radius: 20px
+    height: 100%
+  &_8
+    background-color: #FFE4B3
+  &_9
+    background-color: #FFF6E6
+    &::before
+      background-color: #FFC967 !important
+  &_10
+    background-color: #FFD3A3
+    border-radius: 0 !important
+  &_11
+    background-color: #373660
+  &_12
+    background-color: #D9D9E9
+    margin-top: 20px
+    height: 160px
+    padding: 1rem
+    @media screen and (max-width: $bp-max-xs) 
+      margin-top: 0
+      height: 100%
+  &_13
+    background-color: #FFB6B0
+    border-radius: 20px
+  &_14
+    background-color: #8D8CBE
+    border-radius: 20px
  
 //POSITION
 .posit
@@ -119,6 +150,14 @@
     margin-top: 150px
   &_2
     height: 100%
+  &_3
+    left: 25% !important
+  &_4
+    top: -45px !important
+    @media screen and (max-width: $bp-max-xs) 
+      top: -20px !important
+.mbottom
+  margin-bottom: 6rem 
   
 //TRANFORMACIONES
 .tranform
@@ -173,6 +212,8 @@
 .text-end
   text-align: left !important
 .tarjeta--azul
-  background-image: url("../assets/curso/tema1/fondo4.svg") !important
+  background-image: url("../assets/curso/tema2/fondo4.svg") !important
   background-repeat: no-repeat
   background-size: cover
+.tabla-a thead
+  border-top: none !important
