--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -167,6 +167,19 @@
     background-color: #FFC485
   &_19
     background-color: #FFF6E6 !important
+  &_20
+    background-color: #FFE7E4
+  &_21
+    background-color: #FFC967
+    height: 100%
+    border-radius: 20px
+  &_22
+    background-color: #FFA648
+    height: 100%
+    border-radius: 20px
+  &_23
+    background-color: #373660
+    border-radius: 30px
  
 //POSITION
 .posit
@@ -196,6 +209,11 @@
     transform: scale(1.11);
   &::before
     color: $white
+.tranform_1
+  transition: transform .2s;
+  &:hover
+    transform: scale(1.20);
+
 
 //ANIMACION BANNER PRINCIPAL//
 .banner-principal__img
@@ -248,3 +266,7 @@
   background-color: #FFF6E6 !important
 .tabs-a__tab
   background-color: #E8E8E8
+.lista-ol--cuadro__vineta
+  background-color: #373660
+.tarjeta-flip.color-primario .tarjeta-flip__contenido
+  background-color: #FFEDCC
