--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -82,6 +82,10 @@
     background-image: url("../assets/curso/fondo-intro.png")
     background-repeat: no-repeat
     background-size: contain
+    @media screen and ( max-width: 420px )
+      margin: 0 -23px
+      width: calc(100% + 46px)
+      top: 20px
 
 .bg_grad-02
   background-image: url("../assets/curso/tema1/fondo1.svg")
@@ -151,12 +155,12 @@
     background-color: #8D8CBE
     border-radius: 20px
   &_15
-    background-color: #FFC967
+    background-color: #FFA648
     border-radius: 20px
     height: 100%
     text-align: center
-    &:hover
-      background-color: #FFA648 !important
+    &:hover 
+      background-color: #FFC967 !important
   &_16
     background-color: #FFC967
     border-radius: 20px
@@ -207,6 +211,7 @@
   &:hover
     background-color: #373660
     transform: scale(1.11);
+    color: white !important
   &::before
     color: $white
 .tranform_1
