--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -77,7 +77,7 @@ $color-btn-texto: $white
 
 // Colores banner --------------------------------------
 $color-banner-fondo: $color-secundario
-$color-banner-text: $black
+$color-banner-text: #12263F
 
 // Colores anexos
 $color-fondo-anexo: $color-sistema-g
